--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -18,6 +18,6 @@
     border-radius: 4px;
 	color: #a94442;
     background-color: #f2dede;
-    border-color: #ea0c13;	
+    border-color: #ebccd1;	
 	white-space: nowrap;
 }
